==> aws/amazon-freertos/vendors/ti/boards/cc3220_launchpad/ports/wifi/iot_wifi.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "pthread.h"
#include "unistd.h"
#include <string.h>
#include "network_if.h"
#include "iot_wifi.h"
#include "aws_wifi_config.h"
#include "iot_secure_sockets.h"
#define wifiGENERAL_INTERNAL_ERROR      -1

WIFIReturnCode_t WIFI_On( void )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    if( xWIFIInitDone == pdFALSE )
    {
        /* This buffer is used to store the semaphore's data structure
         * and therefore must be static. */
        static StaticSemaphore_t xSemaphoreBuffer;

        /* Create the semaphore used to serialize Wi-Fi module operations. */
        xWiFiSemaphoreHandle = xSemaphoreCreateBinaryStatic( &( xSemaphoreBuffer ) );

        if ( xWiFiSemaphoreHandle != NULL )
        {
            /* Initialize semaphore. */
            xSemaphoreGive( xWiFiSemaphoreHandle );

            /*Create simple link task. */
            xRetVal = prvCreateSLTask();

            /* Everything is successful then the one time initialization is done. */
            if ( xRetVal == 0 )
            {
                xWIFIInitDone = pdTRUE;
            }
        }
    }

    /* Reset the network processor. */
    xRetVal = prvResetNetworkCPU();

    if ( xRetVal == eWiFiSuccess )
    {
        /* Reset the state of the machine. */
        Network_IF_ResetMCUStateMachine();

        /* Init the Wi-Fi driver in station mode.*/
        Network_IF_InitDriver( eWiFiModeStation );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int32_t lRetVal;
    SlWlanSecParams_t xSecurityParams = { 0 };
    char cSSID[ wificonfigMAX_SSID_LEN + 1 ] = { 0 };

    configASSERT( pxNetworkParams != NULL );
    configASSERT( pxNetworkParams->ucSSIDLength > 0 );

    if ( pxNetworkParams->xSecurity != eWiFiSecurityOpen )
    {
        configASSERT( pxNetworkParams->xPassword.xWPA.ucLength > 0 );
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        if( pxNetworkParams->ucSSIDLength <= wificonfigMAX_SSID_LEN )
        {
            /* Write the input constant SSID to the local copy. A local copy of the
            * Wi-Fi SSID parameter is needed because Network_IF_ConnectAP() will
            * attempt to write to it's input parameter pcSsid. */
            prvByteArrayToString( cSSID, pxNetworkParams->ucSSID, pxNetworkParams->ucSSIDLength, wificonfigMAX_SSID_LEN );

            /* Initialize AP security params. */
            xSecurityParams.Key = ( signed char * ) pxNetworkParams->xPassword.xWPA.cPassphrase;
            xSecurityParams.KeyLen = pxNetworkParams->xPassword.xWPA.ucLength;

            xSecurityParams.Type = prvConvertSecurityAbstractedToTI( pxNetworkParams->xSecurity );

            if ( xSecurityParams.Type != wificonfigSEC_TYPE_UNKNOWN )
            {
                /* Connect to the Access Point. If the credentials are incorrect this
                * function will ask for an open SSID. */
                lRetVal = Network_IF_ConnectAP( cSSID,
                                                xSecurityParams );
            }
            else
            {
                lRetVal = wifiGENERAL_INTERNAL_ERROR;
            }
        }
        else
        {
            lRetVal = wifiGENERAL_INTERNAL_ERROR;
        }

        if( lRetVal != 0 )
        {
            configPRINTF( ( "Connection to an AP failed\n\r" ) );
            xRetVal = eWiFiFailure;
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Disconnect( void )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    long lRetVal;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        lRetVal = Network_IF_DisconnectFromAP();

        if( lRetVal == 0 )
        {
            configPRINTF( ( "Wi-Fi Disconnected.\r\n" ) );
        }
        else
        {
            configPRINTF( ( "Wi-Fi already disconnected.\r\n" ) );
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Reset( void )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    long lRetVal;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        /* Reset The state of the machine.*/
        Network_IF_ResetMCUStateMachine();

        /* Disconnect if already connected, stop the sl driver.*/
        Network_IF_DeInitDriver();

        /* Restart the driver in station mode. */
        lRetVal = Network_IF_InitDriver( eWiFiModeStation );

        if( lRetVal != 0 )
        {
            configPRINTF( ( "Failed to start SimpleLink Device\n\r", lRetVal ) );
            xRetVal = eWiFiFailure;
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    long lRetVal;
    long lDeviceMode;

    lDeviceMode = prvConvertRoleAbstractedToTI( xDeviceMode );

    if ( lDeviceMode == ROLE_RESERVED )
    {
        xRetVal = eWiFiFailure;
    }
    else
    {
        /* Try to acquire the semaphore. */
        if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
        {
            /* Set the simple link device.*/
            sl_WlanSetMode( lDeviceMode );

            /* Reset the simple link device.*/
            sl_Stop( 0xFF );
            lRetVal = sl_Start( 0, 0, 0 );

            /* Check if the desired mode is set.*/
            if( lRetVal != lDeviceMode )
            {
                xRetVal = eWiFiFailure;
            }
            /* If the desired rol is AP, then keep trying. */
            else if( lRetVal == ROLE_AP )
            {
                while( !IS_IP_ACQUIRED( g_ulStatus ) )
                {
                    usleep( 1000 );
                }
            }

            /* Return the semaphore. */
            xSemaphoreGive( xWiFiSemaphoreHandle );
        }
        else
        {
            xRetVal = eWiFiTimeout;
        }
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetIPInfo( WIFIIPConfiguration_t * xIPConfig )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int16_t sRetCode;
    unsigned long ulDestinationIP = 0;
    unsigned long ulSubMask = 0;
    unsigned long ulDefGateway = 0;
    unsigned long ulDns = 0;

    /* Get IP address. */
    sRetCode = ( int16_t ) Network_IF_IpConfigGet( &ulDestinationIP,
                                                   &ulSubMask,
                                                   &ulDefGateway,
                                                   &ulDns );

    if( sRetCode != 0 || xIPConfig == NULL )
    {
        xRetVal = eWiFiFailure;
    }
    else
    {
        memset(xIPConfig, 0, sizeof( WIFIIPConfiguration_t ) );

        /*fill the return buffer.*/
        uint8_t * pucIPv4Addr = ( uint8_t * )&xIPConfig->xIPAddress.ulAddress[ 0 ];
        *( pucIPv4Addr ) = SL_IPV4_BYTE( ulDestinationIP, 3 );
        *( pucIPv4Addr + 1 ) = SL_IPV4_BYTE( ulDestinationIP, 2 );
        *( pucIPv4Addr + 2 ) = SL_IPV4_BYTE( ulDestinationIP, 1 );
        *( pucIPv4Addr + 3 ) = SL_IPV4_BYTE( ulDestinationIP, 0 );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int16_t sRetCode;
    uint8_t ucMacAddressVal[ wificonfigMAX_BSSID_LEN ];
    uint16_t usMacAddressLen = wificonfigMAX_BSSID_LEN;
    uint16_t usConfigOpt = 0;

    configASSERT( pucMac != NULL );

    sRetCode = sl_NetCfgGet( SL_NETCFG_MAC_ADDRESS_GET,
                             &usConfigOpt,
                             &usMacAddressLen,
                             ( uint8_t * ) ucMacAddressVal );

    if( sRetCode != 0 )
    {
        configPRINTF( ( "Failed to get MAC address .\r\n" ) );
        xRetVal = eWiFiFailure;
    }
    else
    {
        memcpy( pucMac, ucMacAddressVal, wificonfigMAX_BSSID_LEN );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetHostIP( char * pxHost,
                                 uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    uint32_t ulDestinationIP;

    configASSERT( pxHost != NULL );
    configASSERT( pucIPAddr != NULL );

    ulDestinationIP = SOCKETS_GetHostByName( pxHost );

    if( ulDestinationIP == 0 )
    {
        xRetVal = eWiFiFailure;
    }
    else
    {
        /*fill the return buffer.*/
        *( pucIPAddr ) = SL_IPV4_BYTE( ulDestinationIP, 3 );
        *( pucIPAddr + 1 ) = SL_IPV4_BYTE( ulDestinationIP, 2 );
        *( pucIPAddr + 2 ) = SL_IPV4_BYTE( ulDestinationIP, 1 );
        *( pucIPAddr + 3 ) = SL_IPV4_BYTE( ulDestinationIP, 0 );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;
    SlWlanNetworkEntry_t * pxNetEntries;
    uint8_t i;

    configASSERT( pxBuffer != NULL );
    if ( 0 == ucNumNetworks)
    {
        return eWiFiFailure;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        /*Start Wi-Fi scan with interval period and hidden scan enabled.*/
        xRetVal = prvStartScan( wificonfigSCAN_INTERVAL_SEC,
                                wificonfigSCAN_HIDDEN_CHANNEL );

        /* If the scan was sucessful. */
        if( xRetVal == eWiFiSuccess )
        {
            /*Scan timeout. */
            vTaskDelay( wificonfigSCAN_DURATION_SEC );

            /*Stop Wi-Fi scan. */
            xRetVal = prvStopScan();

        }

        /* If the scan successfully stopped. */
        if( xRetVal == eWiFiSuccess )
        {
            /* TI's compiler has a bug if you use array with variable length on stack, it will malloc without freeing it */
            pxNetEntries = pvPortMalloc( sizeof( SlWlanNetworkEntry_t ) * ucNumNetworks );

            if( pxNetEntries != NULL )
            {
                /*Get the scan results. */
                sl_WlanGetNetworkList( 0,
                                    ucNumNetworks,
                                    &pxNetEntries[ 0 ] );

                for( i = 0 ; i < ucNumNetworks ; i++ )
                {
                    /* strnlen not offered in bsp string.h */
                    size_t xInputSSIDLength = strlen( ( char * ) pxNetEntries[ i ].Ssid );
                    pxBuffer[ i ].ucSSIDLength = xInputSSIDLength > wificonfigMAX_SSID_LEN ? wificonfigMAX_SSID_LEN : xInputSSIDLength;
                    memcpy( pxBuffer[ i ].ucSSID,
                            ( uint8_t * ) pxNetEntries[ i ].Ssid,
                            pxBuffer[ i ].ucSSIDLength );

                    strncpy( ( char * ) pxBuffer[ i ].ucBSSID,
                             ( char * ) pxNetEntries[ i ].Bssid,
                             wificonfigMAX_BSSID_LEN );

                    pxBuffer[ i ].ucChannel = pxNetEntries[ i ].Channel;
                    pxBuffer[ i ].cRSSI = pxNetEntries[ i ].Rssi;

                    /* security types as supported by simplelink . */
                    pxBuffer[ i ].xSecurity = prvConvertSecurityTIToAbstracted( SL_WLAN_SCAN_RESULT_SEC_TYPE_BITMAP( pxNetEntries[ i ].SecurityInfo ) );
                }

                vPortFree( pxNetEntries );
            }
            else
            {
                xRetVal = eWiFiFailure;
            }
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

BaseType_t WIFI_IsConnected( const WIFINetworkParams_t * pxNetworkParams )
{
    BaseType_t xIsConnected = pdFALSE;

    if ( IS_CONNECTED( Network_IF_CurrentMCUState() ) ){
        if ( pxNetworkParams )
        {
            if ( pxNetworkParams->ucSSIDLength > 0
                 && pxNetworkParams->ucSSIDLength <= wificonfigMAX_SSID_LEN
                 && 0 == memcmp( pxNetworkParams->ucSSID, g_ucConnectionSSID, pxNetworkParams->ucSSIDLength ))
            {
                xIsConnected = pdTRUE;
            }
        }
        else
        {
            xIsConnected = pdTRUE;
        }
    }

    return xIsConnected;
}
